prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/char.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/char.rs:5:11
  |
5 | #[ensures(!result)]
  |           ^^^^^^^
  |
note: the error originates here
 --> $DIR/char.rs:6:1
  |
6 | / fn test1(x: char) -> bool {
7 | |     x == 'c'
8 | | }
  | |_^
note: counterexample for "x"
       value:   'c' (0x63)
 --> $DIR/char.rs:6:10
  |
6 | fn test1(x: char) -> bool {
  |          ^
note: counterexample for "result"
       value:   true
 --> $DIR/char.rs:7:5
  |
7 |     x == 'c'
  |     ^^^^^^^^

error: aborting due to previous error

